test/let1.slq

def main(){
	x:=let{
		k:=2;
		forget(k);
	} in k; /// error
	return x;
}
